# memory-profiling-webinar

./: README.md  cabal.project  hie.yaml
heap-shapes/: Main.hs  heap-shapes.cabal
hiobe-index/: README.md  hiobe-index.cabal
hiobe-index/common/: Common.hs
hiobe-index/debugger/: Main.hs
hiobe-index/server/: Database.hs  Handlers.hs  Main.hs  State.hs
hiobe-index/server/Handlers/: Languages.hs  Survey.hs  Utils.hs
hiobe-index/traffic/: Main.hs
